# wasm-coremark

./: Cargo.toml  main.rs
