[package]
name = "wasmi-coremark"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[[bin]]
name = "bm"
path = "main.rs"

[dependencies]
wasmi = "0.11.0"
wasmtime = "0.25.0"
wasm3 = { version = "0.3", features=["build-bindgen"]}
wasmi_2 = { package = "wasmi", git = "https://github.com/paritytech/wasmi", features = ["std", "virtual_memory"] }

[profile.release]
lto = "fat"
codegen-units = 1
