[package]
name = "wasmi-coremark"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2021"

[[bin]]
name = "bm"
path = "main.rs"

[dependencies]
wasmi = "0.32.0-beta.15"
# wasmi = { path = "../wasmi/crates/wasmi" }
wasmtime = "20.0.0"
# wasm3 = { version = "0.3.1", features = ["build-bindgen"] }

[dependencies.wasm3]
git = "https://github.com/robbepop/wasm3-rs.git"
branch = "rf-fix-wasm3-rs"
features = ["build-bindgen"]

[profile.release]
lto = "fat"
codegen-units = 1
